--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="me.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="me.JPG" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Serena Chan</h4>
       <p>I am a first generation, third year student at the <b>University of California, Berkeley, majoring in Economics with a minor in Data Science.</b> I have a passion for marketing, strategy, data analytics, graphic design, client service, and product management. I was raised in San Francisco, currently based in Berkeley, and aspire to live in New York City.</p> 
@@ -101,7 +101,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
       <p><b>My hobbies include:</b> attending Broadway Musicals and symphonies, kayaking, bouldering, graphic and web design, and going on food crawls around the Bay Area. </p>
       <p> Currently open to summer oppportunities so feel free to connect with me at <b>serenacha@berkeley.edu.</b></p>
-      <p>tel: 5353 35531</p>
+
       <hr class="w3-opacity">
       <h4 class="w3-padding-16">Technical Skills</h4>
       <p class="w3-wide">Illustrator</p>
