--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Serena Chan</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="assets/img/logo.1.png">
+<link rel="icon" href="logo.1.png">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
@@ -116,7 +116,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
   <!-- About section -->
   <div class="w3-container w3-theme-y w3-center w3-text-dark-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="me.PNG" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="serena.PNG" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Serena Chan</h4>
       <p>I am a first generation, third year student at the <b>University of California, Berkeley, majoring in Economics with a minor in Data Science.</b> I have a passion for marketing, strategy, data analytics, graphic design, client service, and product management. I was raised in San Francisco, currently based in Berkeley, and aspire to live in New York City.</p> 
