--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
     
    <div class="w3-quarter">
       <img src="portfolio/album.png" style="width:100%" onclick="onClick(this)" alt="Music Album Redesign">
-      <img src="portfolio/lyric.png" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="portfolio/fareeza.PNG" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="portfolio/lyric.png" style="width:100%" onclick="onClick(this)" alt="Lyric poster concept art using Illustrator">
+      <img src="portfolio/Fareeza.png" style="width:100%" onclick="onClick(this)" alt="Romantic Dreamer">
     </div>
     
     <div class="w3-quarter">
-      <img src="portfolio/pool.png" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="portfolio/abstract.png" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="portfolio/graciela.png" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="portfolio/pool.png" style="width:100%" onclick="onClick(this)" alt="Isometric Pool Party">
+      <img src="portfolio/abstract.png" style="width:100%" onclick="onClick(this)" alt="Abstract Art with my favorite colors">
+      <img src="portfolio/graciela.png" style="width:100%" onclick="onClick(this)" alt="Going away present for my best friend.">
     </div>
 
     <div class="w3-quarter">
-      <img src="portfolio/peachy.png" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-      <img src="portfolio/fruit.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="portfolio/letter.png" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="portfolio/peachy.png" style="width:100%" onclick="onClick(this)" alt="Isometric text of my favorite fruit.">
+      <img src="portfolio/fruit.png" style="width:100%" onclick="onClick(this)" alt="Birthday art print">
+      <img src="portfolio/letter.png" style="width:100%" onclick="onClick(this)" alt="Custom envelope print">
     </div>
   </div>
 
