--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
   object-fit: cover;
   object-position: center;
   cursor: pointer}
-.w3-quarter img:hover{opacity: .4; transition: 0.01s}
+.w3-quarter img:hover{opacity: .4}
 </style>
 <body class="w3">
 
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-theme-12 w3-xlarge w3-padding-13">
-  <span class="w3-left w3-padding"style="font-size:30px">SERENA CHAN </span>
+  <span class="w3-left w3-padding"style="font-size:30px"><class=name style="color:  #505050 ">SERENA CHAN </class=name></span>
   <a href="javascript:void(0)" class="w3-right w3-button" onclick="w3_open()"><img src="logo.1.png" style="float:right" style="width:100%" height="45"></a>
 </header>
 
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
 <div class="w3-main w3-content" style="max-width:1600px;margin-top:83px">
   
   <!-- Photo grid -->
-  <div class="w3-row" style = "opacity: .85">
+  <div class="w3-row" style = "opacity: .87">
     <div class="w3-quarter">
       <img src="portfolio/teapot.png" style="width:100%" onclick="onClick(this)" alt="High Tea Infographic">
       <img src="portfolio/yuta.png" style="width:100%" onclick="onClick(this)" alt="First piece I made to practice the pen tool in Illustrator.">
