--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
     <img src="serena.png" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Serena Chan</h4>
-      <p>I am a first generation, third year student at the <b>University of California, Berkeley, majoring in Economics with a minor in Data Science.</b> I have a passion for marketing, strategy, data analytics, graphic design, client service, and product management. I was raised in San Francisco, currently based in Berkeley, and aspire to live in New York City.</p> 
+      <p>I am a first generation, third year student at the <b>University of California, Berkeley, majoring in Economics with a minor in Data Science.</b> I have a passion for marketing, data analytics, graphic design, UI/UX design, and operations. I was raised in San Francisco, currently based in Berkeley, and aspire to live in New York City.</p> 
 
       <p> My personal values place people at the center of my work which is why I focus on creating eye-catching content to meet a large target audience. Driven by my imagination and ambition, I constantly set new goals for myself and through my curiousity, I am able to discover what interests me. I enjoy meeting new people and maintaining meaningful relationships as each person teaches me something new and exciting.</p>
 
@@ -129,18 +129,18 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
       <p> Currently open to summer oppportunities so feel free to connect with me at <b>serenacha@berkeley.edu.</b></p>
 
       <hr class="w3-opacity">
-      <h4 class="w3-padding-16">Technical Skills</h4>
-      <p class="w3-wide">Illustrator</p>
+      <h4 class="w3-padding-16">Language Fluency</h4>
+      <p class="w3-wide">English</p>
       <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:75%; color: white">75%</div>
+        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:100%; color: white">100%</div>
       </div>
-      <p class="w3-wide">Web Design</p>
+      <p class="w3-wide">Chinese (Cantonese)</p>
       <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:65%; color: white">65%</div>
+        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:85%; color: white">85%</div>
       </div>
-      <p class="w3-wide">Photoshop</p>
+      <p class="w3-wide">Chinese (Mandarin)</p>
       <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:80%; color: white">80%</div>
+        <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:70%; color: white">70%</div>
       </div>
       <p><button class="w3-button" style="width:100%; height: 100%">
             <a href="resume.pdf">
