--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-quarter img:hover{opacity: 0.6; transition: 0.3s}
 
 /*pink color*/
+.w3-theme-y1 {background-color: #f2cd75 !important}
 .w3-theme-y {background-color: #f9e6ba !important}
 .w3-theme-15 {background-color:#fffcfc !important}
 .w3-theme-14 {background-color:#fdf5f4!important}
@@ -45,7 +46,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
 <body class="w3">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index: 3; width: 250px; font-weight: bold; display: none; right: 0px;" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-theme-y1 w3-animate-right w3-top w3-text-light-grey w3-large" style="z-index: 3; width: 250px; font-weight: bold; display: none; right: 0px;" id="mySidebar">
   <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-32">CLOSE</a> 
   <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">PORTFOLIO</a> 
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT ME</a> 
@@ -117,7 +118,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
   <!-- About section -->
   <div class="w3-container w3-theme-y w3-center w3-text-dark-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="serena.png" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="serena.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Serena Chan</h4>
       <p>I am a first generation, third year student at the <b>University of California, Berkeley, majoring in Economics with a minor in Data Science.</b> I have a passion for marketing, data analytics, graphic design, UI/UX design, and operations. I was raised in San Francisco, currently based in Berkeley, and aspire to live in New York City.</p> 
