--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
     <div class="w3-quarter">
       <img src="portfolio/teapot.png" style="width:100%" onclick="onClick(this)" alt="High Tea Infographic">
       <img src="portfolio/yuta.png" style="width:100%" onclick="onClick(this)" alt="First piece I made to practice the pen tool in Illustrator.">
-      <img src="portfolio/accelo.png" style="width:100%" onclick="onClick(this)" alt="Science Fiction Movie Poster Redesign">
+      <img src="portfolio/accelo.png" style="width:100%" onclick="onClick(this)" alt="In honor of my last day at Accelo, I made a print for my co-workers of their favorite things.">
    </div>
     
    <div class="w3-quarter">
