--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
 
     <div class="w3-quarter">
       <img src="portfolio/peachy.png" style="width:100%" onclick="onClick(this)" alt="Isometric text of my favorite fruit."> 
-      <img src="portfolio/egg.png" style="width:100%" onclick="onClick(this)" alt="An Egg-cellent Way to Start the Day!">
+      <img src="portfolio/eggcellent1.png" style="width:100%" onclick="onClick(this)" alt="An Egg-cellent Way to Start the Day!">
       <img src="portfolio/fruit.png" style="width:100%" onclick="onClick(this)" alt="Birthday art print">
      
     </div>
