--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
   <div class="w3-row" style = "opacity: .87">
     <div class="w3-quarter">
       <img src="portfolio/teapot.png" style="width:100%" onclick="onClick(this)" alt="High Tea Infographic">
-       <img src="portfolio/Q&A.png" style="width:100%" onclick="onClick(this)" alt="A graphic I made for Accelo's monthly Q&A."> 
+       <img src="portfolio/Q&A.png" style="width:100%" onclick="onClick(this)" alt="A graphic I made for Accelo's monthly Q&A sessions."> 
             <img src="portfolio/accelo.png" style="width:100%" onclick="onClick(this)" alt="In honor of my last day at Accelo, I made a print for my co-workers of their favorite things.">
    </div>
     
