--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
     </div>
     
     <div class="w3-quarter">
-      <img src="portfolio/pool.png" style="width:100%" onclick="onClick(this)" alt="Isometric Pool Party">
-      <img src="portfolio/abstract.png" style="width:100%" onclick="onClick(this)" alt="Abstract Art with my favorite colors">
+      <img src="portfolio/abstract.png" style="width:100%" onclick="onClick(this)" alt="Abstract art using some of my favorite colors">
+      <img src="portfolio/peachy.png" style="width:100%" onclick="onClick(this)" alt="Isometric text of my favorite lunch-time snack">
       <img src="portfolio/fruit.png" style="width:100%" onclick="onClick(this)" alt="Going away present for my best friend.">
     </div>
 
