--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
     
     <div class="w3-quarter">
       <img src="portfolio/abstract.png" style="width:100%" onclick="onClick(this)" alt="Abstract art using some of my favorite colors">
-      <img src="portfolio/peachy.png" style="width:100%" onclick="onClick(this)" alt="Isometric text of my favorite lunch-time snack">
+      <img src="portfolio/lovemaze.png" style="width:100%" onclick="onClick(this)" alt="Love is maze and life is a riddle">
       <img src="portfolio/fruit.png" style="width:100%" onclick="onClick(this)" alt="Going away present for my best friend.">
     </div>
 
