--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; }
         <div class="w3-container w3-padding-small w3-center w3-theme-d2" style="width:70%; color: white">70%</div>
       </div>
       <p><button class="w3-button" style="width:100%; height: 100%">
-            <a href="resume.pdf">
+            <a href="resume.1.pdf">
              <img class="w3-hover-light-white" src="resume.png" style="position: relative; width: 100%; height:100%">
             </a></button></p>
       <hr class="w3-opacity">
